# ds-hw-12

./: README.md  hw12.ipynb  pyproject.toml
